--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </form> 
         <div id="seccion_info"></div>
     </main>
-    <script src="index.js"></script>
+    <script src="./lib/index.js" type="module"></script>
 </body>
 
 </html>
